--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
     <script src="./modal.js"></script>
     <script src="./header.js"></script>
-
+    <script src="https://kwes.io/v2/kwes-script.js" defer></script>
 </body>
 
 </html>
