--- a/index.html
+++ b/index.html
@@ -412,17 +412,17 @@
                     <p class="py-2"><q class="text-input">Learning to write programs stretches your mind, and helps you think better, creates a way of thinking about things that I think is helpful in all domains.</q> <cite class="right">- Bill Gates</cite> </p>
                 </div>
                 <div class="">
-                    <form action="">
+                    <form class="kwes-form" action="https://kwes.io/api/foreign/forms/yzhs21sC3dVV8hkYvZGq">
                         <div class="grid lg:gap-4  lg:grid-cols-2">
-                            <input class="border text-input w-100 p-4 border-round-min mb-6" type="text" placeholder="First Name" required>
-                            <input class="border text-input w-100 p-4 border-round-min mb-6" type="text" placeholder="Last Name" required>
+                            <input class="border text-input w-100 p-4 border-round-min mb-6" type="text" placeholder="First Name" rules="required|max:255" required>
+                            <input class="border text-input w-100 p-4 border-round-min mb-6" type="text" placeholder="Last Name" rules="required|max:255" required>
                         </div>
                         <div>
-                            <input class="border w-100 text-input p-4 border-round-min mb-6" type="email" placeholder="Email address" required>
+                            <input class="border w-100 text-input p-4 border-round-min mb-6" type="email" placeholder="Email address" rules="required|max:255" required>
                             <textarea name="input_text" class="border-green w-100 border-round-min " rows="7"></textarea>
                         </div>
                         <div class="flex justify-center md:justify-start">
-                            <button class="flex btn-primary  text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">Get in touch</button>
+                            <button type="submit" class="flex btn-primary  text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">Get in touch</button>
                         </div>
                     </form>
                 </div>
