add kwes form name

--- a/index.html
+++ b/index.html
@@ -414,11 +414,11 @@
                 <div class="">
                     <form class="kwes-form" action="https://kwes.io/api/foreign/forms/yzhs21sC3dVV8hkYvZGq">
                         <div class="grid lg:gap-4  lg:grid-cols-2">
-                            <input class="border text-input w-100 p-4 border-round-min mb-6" type="text" placeholder="First Name" rules="required|max:255" required>
-                            <input class="border text-input w-100 p-4 border-round-min mb-6" type="text" placeholder="Last Name" rules="required|max:255" required>
+                            <input class="border text-input w-100 p-4 border-round-min mb-6" name = 'firstname' type="text" placeholder="First Name" rules="required|max:255" required>
+                            <input class="border text-input w-100 p-4 border-round-min mb-6" name = 'lastname' type="text" placeholder="Last Name" rules="required|max:255" required>
                         </div>
                         <div>
-                            <input class="border w-100 text-input p-4 border-round-min mb-6" type="email" placeholder="Email address" rules="required|max:255" required>
+                            <input class="border w-100 text-input p-4 border-round-min mb-6" name="email" type="email" placeholder="Email address" rules="required|max:255" required>
                             <textarea name="input_text" class="border-green w-100 border-round-min " rows="7"></textarea>
                         </div>
                         <div class="flex justify-center md:justify-start">
