--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Murodjon Tursunpulatov</title>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/reset.css">
@@ -42,8 +43,8 @@
                     <div class="main__icons flex  justify-center mx-auto mt-6">
                         <a href="https://github.com/Murodjon000" target="_blank"><i class='bx bxl-github black header__box-con'></i></a>
                         <a href="https://www.linkedin.com/in/murodjon-tursunpulatov-5189481b3/" target="_blank"><i class='bx bxl-linkedin black header__box-con'></i></a>
-                        <a href="https://twitter.com/MurodjonTursun5" target="_blank"><i class='bx bxl-twitter black header__box-con'></i></a>
-                        <a href="https://www.facebook.com/murodjon.tursunpulatov/" target="_blank"><i class='bx bxl-facebook black header__box-con'></i></a>
+                        <a href="https://angel.co/u/murodjon-tursunpulatov" target="_blank"><i class='fa fa-angellist  black header__box-con'></i></a>
+
                     </div>
                 </div>
             </div>
@@ -64,8 +65,8 @@
                 <div class="main__icons flex  justify-center mx-auto mt-6">
                     <a href="https://github.com/Murodjon000" target="_blank"><i class='bx bxl-github gray-700 main__box-con'></i></a>
                     <a href="https://www.linkedin.com/in/murodjon-tursunpulatov-5189481b3/" target="_blank"><i class='bx bxl-linkedin gray-700 main__box-con'></i></a>
-                    <a href="https://twitter.com/Murodjo91836152" target="_blank"><i class='bx bxl-twitter gray-700 main__box-con'></i></a>
-                    <a href="https://www.facebook.com/murodjon.tursunpulatov/" target="_blank"><i class='bx bxl-facebook gray-700 main__box-con'></i></a>
+                    <a href="https://angel.co/u/murodjon-tursunpulatov" target="_blank"><i class='fa fa-angellist  gray-700 main__box-con'></i></a>
+
                 </div>
             </div>
         </div>
@@ -349,7 +350,7 @@
                 <div class="about__head flex flex-column justify-center mx-auto">
                     <h1 class="black-100 text-lg">About Me</h1>
                 </div>
-                <p class="span_main black-100">I`m Murodjon Tursunpulatov, a <span class="green bold">full-stack developer</span> and <span class="green bold">son</span> living in Termez, </p>
+                <p class="span_main black-100">I`m Murodjon Tursunpulatov, a <span class="green bold">full-stack developer</span> and <span class="green bold">a son</span> living in Termez, </p>
                 <p class="span_main black-100">currently student at Microverse.</p>
 
                 <a href="https://docs.google.com/document/d/1z_xDKN092Mut9OM_toFu7b8vF94EJVHpO7bJspeQi_o/edit" target="_blank">
@@ -433,8 +434,8 @@
         <div class="main__icons flex  justify-center mx-auto p-4">
             <a href="https://github.com/Murodjon000" target="_blank"><i class='bx bxl-github gray-700 main__box-con'></i></a>
             <a href="https://www.linkedin.com/in/murodjon-tursunpulatov-5189481b3/" target="_blank"><i class='bx bxl-linkedin gray-700 main__box-con'></i></a>
-            <a href="https://twitter.com/MurodjonTursun5" target="_blank"><i class='bx bxl-twitter gray-700 main__box-con'></i></a>
-            <a href="https://www.facebook.com/murodjon.tursunpulatov/" target="_blank"><i class='bx bxl-facebook gray-700 main__box-con'></i></a>
+            <a href="https://angel.co/u/murodjon-tursunpulatov" target="_blank"><i class='fa fa-angellist  gray-700 main__box-con'></i></a>
+
         </div>
     </footer>
 
