add new project

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header class="header_container">
         <div class="header__box mx-55 px-6 md:flex mx-auto justify-between align-center hidden">
-            <a href="#home" class="flex align-center header__link active"><i class='bx bxs-home mr-1'></i>Home</a>
+            <a href="#home" class="flex align-center header__link"><i class='bx bxs-home mr-1'></i>Home</a>
             <a href="#about" class="flex align-center header__link"><i class='bx bx-id-card mr-1'></i>About Me</a>
             <a href="#projects" class="flex align-center header__link"><i class='bx bx-network-chart mr-1'></i>Projects</a>
             <a href="#connect" class="flex align-center header__link"><i class='bx bxs-contact mr-1'></i>Contact</a>
@@ -85,7 +85,7 @@
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Ruby</span>
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Rails</span>
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Sass</span>
-                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootsrap</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootstrap</span>
                             </div>
                             <div>
                                 <button href="#myModal2" class="flex modal-button  btn-primary mx-auto justify-center text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">See Project</button>
@@ -104,7 +104,7 @@
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Ruby</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Rails</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Sass</span>
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootsrap</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootstrap</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">RSpec</span>
                                             </div>
                                             <div class="mt-3 px-6 mb-6">
@@ -127,6 +127,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="border-round-full border flex flex-column justify-center mb-8 ">
                         <img class="border-round w-100" src="./assets/friend-a.jpg" alt="">
                         <div class="">
@@ -135,7 +136,7 @@
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Ruby</span>
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Rails</span>
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Sass</span>
-                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootsrap</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootstrap</span>
                             </div>
                             <div>
                                 <button href="#myModal1" class="flex modal-button  btn-primary mx-auto justify-center text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">See Project</button>
@@ -154,7 +155,7 @@
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Ruby</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Rails</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Sass</span>
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootsrap</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootstrap</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">RSpec</span>
                                             </div>
                                             <div class="mt-3 px-6 mb-6">
@@ -300,8 +301,49 @@
                         </div>
                     </div>
 
+                    <div class="border-round-full border flex flex-column justify-center mb-8 ">
+                        <img class="border-round w-100" src="./assets/weather.jpg" alt="">
+                        <div class="">
+                            <h2 class="card__inner-text text-center p-4">Weather App</h2>
+                            <div class="flex justify-center flex-wrap cards__span-box ">
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Html</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootstrap</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">JavaScript</span>
+                            </div>
+                            <div>
+                                <button href="#myModal7" class="flex modal-button  btn-primary mx-auto justify-center text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">See Project</button>
+                                <div class="overlay"></div>
+                                <div id="myModal7" class="modal">
+                                    <div class="modle-content mx-auto   flex flex-column">
+                                        <div class="inner__modal">
+                                            <button class="modal-close-btn relative"><i class='bx bxs-x-square modal-icon'></i></button>
+                                            <img class="border-round-full px-6  w-100 mb-6 modal__image" src="./assets/weather.jpg" alt="">
+                                            <div class="flex px-6 justify-start align-center">
+                                                <div class="">
+                                                    <span class="modal__text  flex  align-center flex-wrap">Online Pets Store Template </span>
+                                                </div>
+                                            </div>
+                                            <div class="flex px-6 justify-start mt-3 flex-wrap cards__span-box ">
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Html</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Bootstrap</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">JavaScript</span>
 
-
+                                            </div>
+                                            <div class="mt-3 px-6 mb-6">
+                                                <p>The Weather App project comes at the end of the Asynchronous Javascript and APIs section of the Javascript course in Microverse. It tests the knowledge of the student about asynchronous communication with promises or async/await and when to use them.</p>
+                                            </div>
+                                            <div class="flex mb-6 px-6 ">
+                                                <a href="https://weather-app-murod.netlify.app/" target='_blank'> <button class="flex btn-primary text-white align-center border-round-min p-3  bg-green">See Live<i class='bx bx-target-lock text-white ml-2'></i></button></a>
+                                                <a href="https://github.com/Murodjon000/weather-js" target='_blank'><button class="flex btn-primary  mx-4  text-white align-center border-round-min p-3   bg-green">See Source<i class='bx bxl-github text-white ml-2 '></i></button></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="border-round-full border flex flex-column justify-center mb-8 ">
                         <img class="border-round w-100" src="./assets/petto.jpg" alt="">
                         <div class="">
@@ -343,6 +385,8 @@
                             </div>
                         </div>
                     </div>
+
+
                 </div>
             </div>
 
