--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                             <img class="border-round-full px-6  w-100 mb-6 modal__image" src="./assets/weather.jpg" alt="">
                                             <div class="flex px-6 justify-start align-center">
                                                 <div class="">
-                                                    <span class="modal__text  flex  align-center flex-wrap">Online Pets Store Template </span>
+                                                    <span class="modal__text  flex  align-center flex-wrap">Weather App </span>
                                                 </div>
                                             </div>
                                             <div class="flex px-6 justify-start mt-3 flex-wrap cards__span-box ">
