add new project

--- a/index.html
+++ b/index.html
@@ -173,12 +173,57 @@
                     </div>
 
                     <div class="border-round-full border flex flex-column justify-center mb-8 ">
+                        <img class="border-round w-100" src="./assets/horse.jpg" alt="">
+                        <div class="">
+                            <h2 class="card__inner-text text-center p-4">Pets Catalogue</h2>
+                            <div class="flex justify-center flex-wrap cards__span-box ">
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">React</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Redux</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">API</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Sass</span>
+                            </div>
+                            <div>
+                                <button href="#myModal8" class="flex modal-button  btn-primary mx-auto justify-center text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">See Project</button>
+                                <div class="overlay"></div>
+                                <div id="myModal8" class="modal">
+                                    <div class="modle-content mx-auto   flex flex-column">
+                                        <div class="inner__modal">
+                                            <button class="modal-close-btn relative"><i class='bx bxs-x-square modal-icon'></i></button>
+                                            <img class="border-round-full px-6  w-100 mb-6 modal__image" src="./assets/horse.jpg" alt="">
+                                            <div class="flex px-6 justify-start align-center">
+                                                <div class="">
+                                                    <span class="modal__text  flex  align-center flex-wrap">Pet finder App</span>
+                                                </div>
+                                            </div>
+                                            <div class="flex px-6 justify-start mt-3 flex-wrap cards__span-box ">
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">React</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Redux</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">API</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Sass</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Jest</span>
+
+                                            </div>
+                                            <div class="mt-3 px-6 mb-6">
+                                                <p>This project was built as a React & Redux Capstone project at Microverse. It is based on the idea of a "Catalogue of Recipes" which is a single-page application with React and Redux. It shows a browsable list of pets that users can filter and access to the details of each pet. Every page, the main page, and pages for each item have a unique route within the Single Page Application, SPA.</p>
+                                            </div>
+                                            <div class="flex mb-6 px-6 ">
+                                                <a href="pets-finder.netlify.app/" target='_blank'> <button class="flex btn-primary text-white align-center border-round-min p-3  bg-green">See Live<i class='bx bx-target-lock text-white ml-2'></i></button></a>
+                                                <a href="https://github.com/Murodjon000/Pets" target='_blank'><button class="flex btn-primary  mx-4  text-white align-center border-round-min p-3   bg-green">See Source<i class='bx bxl-github text-white ml-2 '></i></button></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="border-round-full border flex flex-column justify-center mb-8 ">
                         <img class="border-round w-100" src="./assets/phome.jpg" alt="">
                         <div class="">
                             <h2 class="card__inner-text text-center p-4">Phone Store Website</h2>
                             <div class="flex justify-center flex-wrap cards__span-box ">
-                                <span class="px-3 mb-2 py-2 border-round-min card__span">JavaScript</span>
-                                <span class="px-3 mb-2 py-2 border-round-min card__span">Html</span>
+                                <span class="px-3 mb-2 py-2 border-round-min card__span">React</span>
+                                <span class="px-3 mb-2 py-2 border-round-min card__span">Redux</span>
                                 <span class="px-3 mb-2 py-2 border-round-min card__span">Css</span>
                                 <span class="px-3 mb-2 py-2 border-round-min card__span">Netlify</span>
                             </div>
@@ -196,10 +241,10 @@
                                                 </div>
                                             </div>
                                             <div class="flex px-6 justify-start mt-3 flex-wrap cards__span-box ">
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Html</span>
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">React</span>
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Netlify</span>
+                                                <span class="px-3 mb-2 py-2 border-round-min card__span">React</span>
+                                                <span class="px-3 mb-2 py-2 border-round-min card__span">Redux</span>
+                                                <span class="px-3 mb-2 py-2 border-round-min card__span">Css</span>
+                                                <span class="px-3 mb-2 py-2 border-round-min card__span">Netlify</span>
                                             </div>
                                             <div class="mt-3 px-6 mb-6">
                                                 <p>This is simple phone store with React.In there you can see products and yo can purchase them also.</p>
@@ -220,10 +265,10 @@
                         <div class="">
                             <h2 class="card__inner-text text-center p-4">Amazon Shopping Website</h2>
                             <div class="flex justify-center flex-wrap cards__span-box ">
-                                <span class="px-3 py-2 mb-2 border-round-min card__span">Html</span>
-                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
-                                <span class="px-3 py-2 mb-2 border-round-min card__span">Java Script</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">React</span>
                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Firebase</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
+                                <span class="px-3 py-2 mb-2 border-round-min card__span">Jsx</span>
                             </div>
                             <div>
                                 <button href="#myModal4" class="flex modal-button  btn-primary mx-auto justify-center text-white align-center border-round-min p-3 mb-6 mt-6 bg-green">See Project</button>
@@ -239,10 +284,10 @@
                                                 </div>
                                             </div>
                                             <div class="flex px-6 justify-start mt-3 flex-wrap cards__span-box ">
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Html</span>
-                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">React</span>
                                                 <span class="px-3 py-2 mb-2 border-round-min card__span">Firebase</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Css</span>
+                                                <span class="px-3 py-2 mb-2 border-round-min card__span">Jsx</span>
                                             </div>
                                             <div class="mt-3 px-6 mb-6">
                                                 <p>Amazon is an American multinational technology company based in Seattle, Washington, which focuses on e-commerce, cloud computing, digital streaming, and artificial intelligence. It is considered one of the Big Five companies in the U.S. information technology industry.</p>
@@ -386,6 +431,8 @@
                         </div>
                     </div>
 
+                    
+
 
                 </div>
             </div>
@@ -414,6 +461,7 @@
                                 <span class="px-3 py-2 mb-2 border-round-full card__span-about">JavaScript</span>
                                 <span class="px-3 py-2 mb-2 border-round-full card__span-about">Html</span>
                                 <span class="px-3 py-2 mb-2 border-round-full card__span-about">Css</span>
+                                <span class="px-3 py-2 mb-2 border-round-full card__span-about">Sass</span>
                             </div>
                         </div>
                     </div>
@@ -428,7 +476,11 @@
                             <div class="flex justify-center flex-wrap cards__span-box about__cards-span-box">
                                 <span class="px-3 py-2 mb-2 border-round-full card__span-about">Bootstrap</span>
                                 <span class="px-3 py-2 mb-2 border-round-full card__span-about">Ruby on rails</span>
+                                <span class="px-3 py-2 mb-2 border-round-full card__span-about">React</span>
+                                <span class="px-3 py-2 mb-2 border-round-full card__span-about">Redux</span>
+                                <span class="px-3 py-2 mb-2 border-round-full card__span-about">Next js</span>
                                 <span class="px-3 py-2 mb-2 border-round-full card__span-about">RSpec</span>
+                                <span class="px-3 py-2 mb-2 border-round-full card__span-about">Jest</span>
                             </div>
                         </div>
                     </div>
