update the link

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                 <p>This project was built as a React & Redux Capstone project at Microverse. It is based on the idea of a "Catalogue of Recipes" which is a single-page application with React and Redux. It shows a browsable list of pets that users can filter and access to the details of each pet. Every page, the main page, and pages for each item have a unique route within the Single Page Application, SPA.</p>
                                             </div>
                                             <div class="flex mb-6 px-6 ">
-                                                <a href="pets-finder.netlify.app/" target='_blank'> <button class="flex btn-primary text-white align-center border-round-min p-3  bg-green">See Live<i class='bx bx-target-lock text-white ml-2'></i></button></a>
+                                                <a href="https://pets-finder.netlify.app/" target='_blank'> <button class="flex btn-primary text-white align-center border-round-min p-3  bg-green">See Live<i class='bx bx-target-lock text-white ml-2'></i></button></a>
                                                 <a href="https://github.com/Murodjon000/Pets" target='_blank'><button class="flex btn-primary  mx-4  text-white align-center border-round-min p-3   bg-green">See Source<i class='bx bxl-github text-white ml-2 '></i></button></a>
                                             </div>
                                         </div>
